kube-sec-deploy/assets/setup/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: portieris-admission-webhook
  namespace: default
  labels:
    app: portieris
webhooks:
  - name: trust.hooks.securityenforcement.admission.cloud.ibm.com
    clientConfig:
      service:
        name: portieris
        namespace: default
        path: "/admit"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRFhBUWF4TEZJM0JqQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeHcKYjNKMGFXVnlhWE5mWTJFd0lCY05NVGt3TlRFek1UWXhNVEU1V2hnUE1qSTVNekF5TWpVeE5qRXhNVGxhTUJjeApGVEFUQmdOVkJBTU1ESEJ2Y25ScFpYSnBjMTlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQUxrOG9KWWRQNEdoSUJ2Z1NRRitNVnRoL20xMitxaTY5TFpKNW5XeFdONDAycm1iYmxDUXFSWmkKNGlqbkFuOUlwa3phTmJydHErZU1KSzM1OWZKcjA0Q0JWMERISWFHNnBwOUgrTEZBV3RuazB4RTBxZUNmZnRpYgpQSWN5U2hkL24w [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments", "replicationcontrollers", "replicasets", "daemonsets", "statefulsets", "jobs", "cronjobs"]
    failurePolicy: Fail
